# unicode-case-mapping

./: .travis.yml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml
benches/: mapping.rs
src/: case_folding_simple.rs  case_mapping.rs  lib.rs  tables.rs
